--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "@next/font": "^13.1.5",
+    "@reduxjs/toolkit": "^1.9.2",
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.1.6",
     "next": "^13.1.6",
     "next-sitemap": "^3.1.52",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "sass": "^1.58.0",
     "shopify-api": "^0.2.3"
   }
