--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.58.0",
-    "shopify-api": "^0.2.3"
+    "shopify-api": "^0.2.3",
+    "stripe": "^11.10.0"
   }
 }
