--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "author": "Vittorio Busatta",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.7.7",
     "@next/font": "^13.1.5",
     "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.3.3",
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.1.6",
     "next": "^13.1.6",
     "next-sitemap": "^3.1.52",
+    "node-fetch": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
