--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.58.0",
     "shopify-api": "^0.2.3",
+    "shopify-api-node": "^3.12.2",
     "shopify-buy": "^2.18.0",
     "stripe": "^11.10.0"
   }
