--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@next/font": "^13.1.5",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.1.6",
+    "express": "^4.18.2",
     "next": "^13.1.6",
     "next-sitemap": "^3.1.52",
     "node-fetch": "^3.3.0",
@@ -26,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
+    "request": "^2.88.2",
     "sass": "^1.58.0",
     "shopify-api": "^0.2.3",
     "shopify-api-node": "^3.12.2",
