--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/font": "^13.1.5",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint": "^8.34.0",
@@ -34,6 +35,9 @@
     "shopify-api": "^0.2.3",
     "shopify-api-node": "^3.12.2",
     "shopify-buy": "^2.18.0",
-    "stripe": "^11.10.0"
+    "stripe": "^11.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
