--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "shopify-api-node": "^3.12.2"
   }
 }
