--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && npm node server/server.js",
     "start": "next start",
     "lint": "next lint",
     "generate-sitemap": "next-sitemap",
