--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && npm node server/server.js",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "generate-sitemap": "next-sitemap",
-    "build:sitemap": "npm run build && npm run generate-sitemap"
+    "build:sitemap": "npm run build && npm run generate-sitemap",
+    "build:app": "next build && node server/server.js"
   },
   "author": "Vittorio Busatta",
   "license": "ISC",
