--- a/client/.gitignore
+++ b/client/.gitignore
@@ -26,8 +26,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-/client/.env*.local
-/server/.env
+.env*.local
 
 # vercel
 .vercel
@@ -36,7 +35,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-
-/server/node_modules
-/client/node_modules
