--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "build": [
+  "builds": [
     {
       "src": "*.js",
       "use": "@vercel/node"
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/.js"
+      "dest": "/"
     }
   ]
 }
